syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message DeleteRecipeRequest {
  string recipeId = 1;
  string userId = 2;
}

message DeleteRecipeResponse {
  string message = 1;
}
