syntax = "proto3";
package v1;

option go_package = "github.com/mephistolie/chefbook-backend-recipe/api/proto/v1";

message UpdateRecipeResponse {
  int32 version = 1;
}
